--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,14 @@
+/*=============================================
+=            Imports            =
+=============================================*/
+
 @import url("https://fonts.googleapis.com/css2?family=Inter");
-//----------------------VARIABLES-----------------------
+
+/*=====  End of Imports  ======*/
+
+/*=============================================
+=            Variables            =
+=============================================*/
 
 @text-header-menu-color: #b3b3b3;
 @text-header-menu-color-hover: #959595;
@@ -81,7 +90,12 @@
 
 @bani-background-color: #f1f1f1;
 
-//----------------------ADDITIONAL RESET-------------------------
+/*=====  End of Variables  ======*/
+
+/*=============================================
+=            Additional Reset            =
+=============================================*/
+
 a {
   text-decoration: inherit;
   color: inherit;
@@ -91,7 +105,11 @@ a {
   }
 }
 
-//----------------------UTILITY-------------------------
+/*=====  End of Additional Reset  ======*/
+
+/*=============================================
+=            Utility            =
+=============================================*/
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -148,8 +166,6 @@ a:hover {
 }
 
 .section-logo {
-  // cursor: pointer;
-
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -360,7 +376,11 @@ header {
   background-size: 200px 200px;
 }
 
-//----------------------HEADER-------------------------
+/*=====  End of Utility  ======*/
+
+/*=============================================
+=            Header            =
+=============================================*/
 
 .contact-options {
   display: flex;
@@ -582,7 +602,11 @@ header {
   }
 }
 
-// ----------------------ADDITIONAL INFO-------------------------
+/*=====  End of Header  ======*/
+
+/*=============================================
+=            Additional Info            =
+=============================================*/
 
 .additional-info {
   display: none;
@@ -817,7 +841,12 @@ header {
     }
   }
 }
-// ----------------------BANNERS-------------------------
+
+/*=====  End of Additional Info  ======*/
+
+/*=============================================
+=            Banners            =
+=============================================*/
 
 .banners {
   margin-top: 0.5em;
@@ -1048,7 +1077,12 @@ header {
   }
 }
 
-//----------------------HEADLINE-------------------------
+/*=====  End of Banners  ======*/
+
+/*=============================================
+=            Headline            =
+=============================================*/
+
 .headline-news {
   margin-top: 10px;
 }
@@ -1139,7 +1173,12 @@ header {
   }
 }
 
-//----------------------RLIVE SECTION-------------------------
+/*=====  End of Headline  ======*/
+
+/*=============================================
+=            Rlive            =
+=============================================*/
+
 .bani,
 .realitatea-tv,
 .rlive {
@@ -1212,7 +1251,12 @@ header {
     margin-left: 0;
   }
 }
-//----------------------ACTUALITATE SECTION-------------------------
+
+/*=====  End of Rlive  ======*/
+
+/*=============================================
+=            Actualitate            =
+=============================================*/
 
 .actualitate {
   margin-bottom: 5em;
@@ -1258,7 +1302,12 @@ header {
   }
 }
 
-//----------------------SUB ECONOMIE SECTION-------------------------
+/*=====  End of Actualitate  ======*/
+
+/*=============================================
+=            Sub Economie            =
+=============================================*/
+
 .sub-economie {
   background-color: @sub-economie-background-color;
   padding: 2em 0;
@@ -1282,7 +1331,11 @@ header {
   }
 }
 
-//----------------------POLITICA SECTION-------------------------
+/*=====  End of Sub Economie  ======*/
+
+/*=============================================
+=            Politica            =
+=============================================*/
 
 .politica {
   padding-bottom: 4em;
@@ -1337,7 +1390,12 @@ header {
   }
 }
 
-//----------------------REALITATEA TV SECTION-------------------------
+/*=====  End of Politica  ======*/
+
+/*=============================================
+=            Realitatea TV            =
+=============================================*/
+
 .realitatea-tv {
   .logo-realitatea-tv {
     width: 170px;
@@ -1351,7 +1409,13 @@ header {
   }
 }
 
+/*=====  End of Realitatea TV  ======*/
+
 //----------------------SOCIETATE ECONOMIE IN LUME AND LIFE SECTION-------------------------
+
+/*=============================================
+=            Societate, Economie and In Lume            =
+=============================================*/
 
 .societate,
 .economie,
@@ -1401,7 +1465,11 @@ header {
   padding-bottom: 2em;
 }
 
-//----------------------OPINII SECTION-------------------------
+/*=====  End of Societate, Economie and In Lume  ======*/
+
+/*=============================================
+=            Opinii            =
+=============================================*/
 
 .opinii {
   .horoscope {
@@ -1550,7 +1618,12 @@ header {
   }
 }
 
-//----------------------BANI-------------
+/*=====  End of Opinii  ======*/
+
+/*=============================================
+=            Bani            =
+=============================================*/
+
 .bani {
   background-color: @bani-background-color;
   .article-header,
@@ -1572,7 +1645,12 @@ header {
   }
 }
 
-//----------------------TOP TAGS & SOCIAL NETWORKS-------------
+/*=====  End of Bani  ======*/
+
+/*=============================================
+=            Tags and Social Networks            =
+=============================================*/
+
 .social-networks,
 .top-tags {
   display: flex;
@@ -1627,7 +1705,12 @@ header {
   }
 }
 
-//----------------------ADDITIONAL ARTICLES-------------------
+/*=====  End of Tags and Social Networks  ======*/
+
+/*=============================================
+=            Additional Articles            =
+=============================================*/
+
 .additional-articles {
   background-color: @additional-articles-background-color;
   padding-top: 3em;
@@ -1658,7 +1741,12 @@ header {
   }
 }
 
-//----------------------AUTO TECH SPORT----------------------
+/*=====  End of Additional Articles  ======*/
+
+/*=============================================
+=            Auto, Tech and Sport            =
+=============================================*/
+
 .auto-tech-sport {
   padding-bottom: 5em;
   subsection {
@@ -1697,7 +1785,12 @@ header {
   }
 }
 
-//----------------------TOATE STIRILE-------------------------
+/*=====  End of Auto, Tech and Sport  ======*/
+
+/*=============================================
+=            Toate Stirile            =
+=============================================*/
+
 .toate-stirile {
   .row > div {
     flex: 0 0 27.5%;
@@ -1725,7 +1818,12 @@ header {
   }
 }
 
-//----------------------FOOTER-------------------------
+/*=====  End of Toate Stirile  ======*/
+
+/*=============================================
+=            Footer            =
+=============================================*/
+
 footer {
   padding-top: 2em;
   .navbar,
@@ -1782,3 +1880,5 @@ footer {
     text-align: center;
   }
 }
+
+/*=====  End of Footer  ======*/
