Working on responsiveness and added new images

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6964,7 +6964,7 @@ button.bg-dark:focus {
 
 .flex-row {
   -ms-flex-direction: row !important;
-  flex-direction: row !important;
+  /* flex-direction: row !important; */
 }
 
 .flex-column {
