--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ body {
 ul {
   display: flex;
 }
+section .mobile {
+  display: none;
+}
 li {
   margin: 0.5em;
 }
@@ -49,9 +52,10 @@ a:hover {
 .last {
   border-bottom: none !important;
 }
-.flex-row {
+.row-flex {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 0;
 }
 .more-info {
@@ -130,7 +134,7 @@ a:hover {
 }
 .small-article img {
   width: 30%;
-  height: auto;
+  height: 100%;
 }
 .small-article .article-title,
 .small-article .article-header {
@@ -193,12 +197,13 @@ header {
   justify-content: center;
   position: relative;
   margin-bottom: 30px;
+  height: fit-content;
 }
 .adblock a {
   border-radius: 20px;
   position: relative;
   overflow: hidden;
-  height: 285px;
+  height: fit-content;
 }
 .adblock img {
   width: 100%;
@@ -389,20 +394,31 @@ header {
   background-position: -52px -21px;
   background-size: 225px 225px;
 }
+.navbar {
+  padding-left: 2em;
+}
 .navbar ul {
   margin-bottom: 0;
 }
+.navbar div a,
 .navbar li a {
   color: #020202;
   font-weight: 500;
+  font-size: 13pt;
   transition: ease-in-out;
   transition-duration: 0.25s;
 }
+.navbar div a:hover,
 .navbar li a:hover {
   color: #444444;
 }
 .navbar #navbar-list-item {
   margin-top: 6px;
+}
+.navbar .live {
+  background-size: 270px 270px;
+  background-position: -86px -29px;
+  display: flex;
 }
 .navbar .navbar-side-menu {
   display: flex;
@@ -428,10 +444,6 @@ header {
 .navbar .navbar-side-menu .weather-button {
   cursor: pointer;
   background-position: -52px -53px;
-}
-.navbar .navbar-side-menu .live {
-  background-size: 270px 270px;
-  background-position: -106px -38px;
 }
 .navbar .navbar-side-menu a {
   display: flex;
@@ -663,11 +675,11 @@ header {
 .breaking-news-title,
 .news-alert-title,
 .rlive-news-title {
+  position: relative;
   font-size: 17pt;
   font-family: "Inter", san-serif;
   font-weight: 600;
-  position: relative;
-  width: 103px;
+  width: 210px;
 }
 .breaking-news-dot,
 .news-alert-dot,
@@ -681,27 +693,23 @@ header {
 .breaking-news-banner {
   background-color: #e50000;
 }
+.breaking-news-banner a > img {
+  width: 12.5%;
+}
 .breaking-news-banner .breaking-news-dot {
   background-size: 300px 300px;
   background-position: -121px -47px;
   position: absolute;
-  right: 35px;
+  right: 15px;
   bottom: 5px;
 }
 .breaking-news-banner .breaking-news-title {
-  width: 120px;
+  width: 100px;
 }
 .breaking-news-banner a {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
-}
-.breaking-news-banner #breaking-news-text-image {
-  height: 50px;
-}
-.breaking-news-banner #breaking-news-image {
-  height: 70px;
-  margin: 1.5em;
 }
 .breaking-news-banner #breaking-news-text {
   color: #fffdff;
@@ -756,16 +764,14 @@ header {
   align-items: center;
   justify-content: space-between;
 }
-.news-alert-banner #news-alert-text-image {
-  height: 50px;
-  margin-right: 32px;
+.breaking-news-banner img,
+.news-alert-banner img,
+.rlive-news-banner img {
+  width: 25%;
+  margin: 1.5em;
 }
 .news-alert-banner .news-alert-dot {
   background-position: -159px -46px;
-}
-.news-alert-banner #news-alert-image {
-  height: 70px;
-  margin: 1.5em;
 }
 .news-alert-banner #news-alert-text {
   color: #000000;
@@ -792,16 +798,9 @@ header {
 .news-alert-banner #news-alert-right-arrow {
   background-position: -80px -80px;
 }
-.rlive-news-banner #rlive-news-text-image {
-  height: 50px;
-  margin-right: 32px;
-}
 .rlive-news-banner .rlive-news-dot {
   background-position: -159px -46px;
-}
-.rlive-news-banner #rlive-news-image {
-  height: 70px;
-  margin: 1.5em;
+  right: 10px;
 }
 .rlive-news-banner #rlive-news-text {
   color: #fffdff;
@@ -926,18 +925,6 @@ header {
   align-items: center;
   justify-content: flex-end;
 }
-.bani #article-1,
-.realitatea-tv #article-1,
-.rlive #article-1,
-.bani #article-2,
-.realitatea-tv #article-2,
-.rlive #article-2,
-.bani #article-3,
-.realitatea-tv #article-3,
-.rlive #article-3 {
-  flex: 0 0 27.5%;
-  max-width: 27.5%;
-}
 .bani .call-to-action,
 .realitatea-tv .call-to-action,
 .rlive .call-to-action {
@@ -1055,7 +1042,8 @@ header {
   margin: 2em 0;
 }
 .sub-economie .small-article a {
-  display: inherit;
+  display: flex;
+  align-items: center;
 }
 .sub-economie .small-article img {
   width: 45%;
@@ -1068,6 +1056,13 @@ header {
   left: 50%;
 }
 /*=====  End of Sub Economie  ======*/
+.economie .logo-row,
+.in-lume .logo-row,
+.life .logo-row,
+.politica .logo-row,
+.societate .logo-row {
+  justify-content: flex-start;
+}
 /*=============================================
 =            Politica            =
 =============================================*/
@@ -1079,14 +1074,10 @@ header {
   padding-bottom: 1em;
 }
 .politica .adblock {
-  height: auto;
   margin-top: 28%;
 }
 .politica .adblock .close-icon {
   right: 14px;
-}
-.politica .adblock a {
-  height: auto;
 }
 .politica .adblock a img {
   height: auto;
@@ -1142,7 +1133,7 @@ header {
 .economie .section-logo,
 .in-lume .section-logo,
 .life .section-logo {
-  padding-left: 9.5%;
+  padding-left: 14.5%;
 }
 .societate .big-article .article-header,
 .economie .big-article .article-header,
@@ -1326,8 +1317,11 @@ header {
   color: black;
 }
 .bani .bani-logo {
-  width: 40%;
-  margin-right: 22%;
+  width: 20%;
+  margin-left: 16%;
+}
+.bani .logo-col {
+  justify-content: flex-start;
 }
 .bani img {
   border-radius: 0;
@@ -1337,13 +1331,14 @@ header {
 }
 /*=====  End of Bani  ======*/
 /*=============================================
-=            Tags and Social Networks            =
+=           Top Tags and Social Networks            =
 =============================================*/
 .social-networks,
 .top-tags {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 85%;
   margin: auto;
   border-bottom: 2px solid #c6c6c6;
@@ -1394,7 +1389,7 @@ header {
 .social-networks .social-network#instagram {
   background-color: #ff4d9c;
 }
-/*=====  End of Tags and Social Networks  ======*/
+/*=====  End of Top Tags and Social Networks  ======*/
 /*=============================================
 =            Additional Articles            =
 =============================================*/
@@ -1509,8 +1504,13 @@ footer #search-panel {
   justify-content: center;
   flex-direction: row;
 }
+footer .navbar ul,
+footer #search-panel ul {
+  flex-wrap: wrap;
+  justify-content: center;
+}
 footer #search-panel {
-  width: 250px;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   color: #b7b7b7;
@@ -1524,7 +1524,7 @@ footer #search-panel {
 }
 footer .search-box {
   position: relative;
-  width: 250px;
+  width: 300px;
 }
 footer .search-icon {
   background-size: 270px 270px;
@@ -1545,3 +1545,303 @@ footer .copyright-text {
   text-align: center;
 }
 /*=====  End of Footer  ======*/
+/*=============================================
+=            Media queries            =
+=============================================*/
+@media screen and (min-width: 1250px) and (max-width: 1321px) {
+  .top-tags {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 1310px) {
+  .breaking-news-banner #breaking-news-text {
+    font-size: 18px;
+  }
+  .rlive-news-banner #rlive-news-text,
+  .news-alert-banner #news-alert-text {
+    font-size: 12px;
+  }
+  .breaking-news-banner a > img,
+  .rlive-news-banner a > img,
+  .news-alert-banner a > img {
+    width: 12vw;
+    margin-right: 0.5em;
+    margin-left: 0.4em;
+  }
+  #main .breaking-news-banner #breaking-news-text {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1185px) and (max-width: 1250px) {
+  .top-tags {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 1185px) {
+  .top-tags {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 1275px) and (max-width: 1335px) {
+  .navbar li a {
+    font-size: 12pt;
+  }
+}
+@media screen and (min-width: 1210px) and (max-width: 1275px) {
+  .navbar {
+    padding-left: 2em;
+  }
+  .navbar li a {
+    font-size: 11pt;
+  }
+}
+@media screen and (min-width: 10px) and (max-width: 1210px) {
+  .navbar {
+    padding-left: 1em;
+  }
+  .navbar li a {
+    font-size: 10pt;
+  }
+  .sub-economie .small-article {
+    flex: 0 0 32%;
+    max-width: 32%;
+  }
+  .realitatea-tv .call-to-action {
+    right: 20%;
+  }
+}
+@media (max-width: 1195px) {
+  .last-tag {
+    display: none;
+  }
+}
+@media (min-width: 1095px) {
+  .live-block-sm {
+    display: none;
+  }
+  .live-block-lg {
+    display: flex;
+  }
+}
+@media (max-width: 1095px) {
+  .text-left-nav {
+    margin: 0;
+  }
+  .left-nav {
+    flex-direction: column-reverse;
+  }
+  header .logo {
+    margin-left: -27px;
+    margin-top: 15px;
+  }
+  .right-header-menu {
+    margin-top: 15px;
+  }
+  .right-header-menu .search-field {
+    width: 150px;
+  }
+  .live-block-lg {
+    display: none;
+  }
+  .navbar {
+    flex-direction: column-reverse;
+  }
+  .live-block-sm {
+    display: flex;
+  }
+  .live-block-sm .icon {
+    background-position: -108px -40px;
+  }
+  .live-block-sm a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 825px) {
+  .right-header-menu > ul {
+    position: relative;
+    margin-right: -45px;
+  }
+}
+/*----------  Bootstrap queries  ----------*/
+@media (max-width: 850px) {
+  .last-tag-lg,
+  .top-tags .tag.last-tag {
+    display: none;
+  }
+}
+@media (min-width: 991.98px) {
+  .bani #article-1,
+  .realitatea-tv #article-1,
+  .rlive #article-1,
+  .bani #article-2,
+  .realitatea-tv #article-2,
+  .rlive #article-2,
+  .bani #article-3,
+  .realitatea-tv #article-3,
+  .rlive #article-3 {
+    flex: 0 0 27.5%;
+    max-width: 27.5%;
+  }
+}
+@media (max-width: 991.98px) {
+  .last {
+    border-bottom: 2px solid #c6c6c6 !important;
+  }
+  body {
+    background-color: #efefef;
+  }
+  section .mobile {
+    display: block;
+  }
+  .breaking-news-banner {
+    padding-right: 1em;
+  }
+  .breaking-news-banner .breaking-news-title {
+    margin-right: 0.6em;
+  }
+  .breaking-news-banner #breaking-news-text {
+    font-size: 13pt;
+    line-height: 14pt;
+  }
+  .economie .call-to-action,
+  .in-lume .call-to-action,
+  .life .call-to-action,
+  .societate .call-to-action,
+  .politica .call-to-action,
+  .actualitate .call-to-action {
+    display: flex;
+    width: 100px;
+    height: fit-content;
+    right: 10px;
+    bottom: unset;
+  }
+  .economie .big-article,
+  .in-lume .big-article,
+  .life .big-article,
+  .societate .big-article,
+  .politica .big-article,
+  .actualitate .big-article {
+    height: unset;
+  }
+  .economie .section-logo,
+  .in-lume .section-logo,
+  .life .section-logo,
+  .societate .section-logo {
+    padding-left: 0;
+  }
+  .economie .section-logo:hover,
+  .in-lume .section-logo:hover,
+  .life .section-logo:hover,
+  .societate .section-logo:hover {
+    color: black;
+  }
+  .section-logo:hover {
+    color: black;
+  }
+  .top-tags {
+    border-top: none;
+    border-bottom: none;
+    color: white;
+    font-family: "Inter", san-serif;
+    justify-content: flex-start;
+  }
+  .top-tags ul {
+    padding-left: 0.6em;
+  }
+  .top-tags .last-tag {
+    display: flex;
+  }
+  .top-tags .more-info {
+    display: none;
+  }
+  .top-tags .section-logo {
+    padding: 0.5em;
+    font-size: 25pt;
+  }
+  .top-tags .new-line {
+    display: block;
+    width: 100vw;
+  }
+  .rlive .call-to-action,
+  .bani .call-to-action,
+  .realitatea-tv .call-to-action {
+    right: 10px;
+  }
+  .rlive .logo-col,
+  .bani .logo-col,
+  .realitatea-tv .logo-col {
+    justify-content: flex-start;
+  }
+  .bani .bani-logo {
+    margin-left: 0;
+  }
+  .bani .call-to-action {
+    color: #323232;
+    font-size: 14pt;
+  }
+  .bani .call-to-action .icon {
+    background-position: -148px -50px;
+  }
+  .auto-tech-sport .logo-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .auto-tech-sport .call-to-action {
+    bottom: unset;
+    right: 1.5%;
+  }
+  .auto-tech-sport .section-logo {
+    width: fit-content;
+    font-size: 25pt;
+    padding: 0.2em;
+  }
+  .auto-tech-sport subsection .article-title {
+    width: 45px;
+    left: 32.5%;
+    top: 10%;
+  }
+  .auto-tech-sport .section-dot {
+    width: 30px;
+    height: 30px;
+    background-position: -154px -41px;
+    background-size: 300px 300px;
+  }
+  .section-logo {
+    font-size: 25pt;
+  }
+  .social-networks {
+    border-top: none;
+  }
+  .social-networks ul .social-network {
+    padding: 0.3em 1em;
+  }
+  .social-networks .section-logo {
+    padding: 0.5em;
+    position: relative;
+    right: 17%;
+  }
+  .social-networks ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  footer .search-box #search-panel {
+    padding: 0.7em 2em;
+  }
+  footer .search-box .icon {
+    top: 8px;
+  }
+  .col-12 {
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+    -ms-flex: 0 0 100% !important;
+  }
+  .non-mobile {
+    display: none !important;
+  }
+}
+/*=====  End of Media queries  ======*/
