--- a/css/style.less
+++ b/css/style.less
@@ -90,6 +90,10 @@
 
 @bani-background-color: #f1f1f1;
 
+@mobile-background-color: #efefef;
+
+@bani-call-to-action-color: #323232;
+
 /*=====  End of Variables  ======*/
 
 /*=============================================
@@ -128,6 +132,10 @@ ul {
   display: flex;
 }
 
+section .mobile {
+  display: none;
+}
+
 li {
   margin: 0.5em;
 }
@@ -140,9 +148,10 @@ a:hover {
   border-bottom: none !important;
 }
 
-.flex-row {
+.row-flex {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin: 0;
 }
 
@@ -230,7 +239,7 @@ a:hover {
   position: relative;
   img {
     width: 30%;
-    height: auto;
+    height: 100%;
   }
 
   .article-title,
@@ -304,12 +313,13 @@ header {
   position: relative;
 
   margin-bottom: 30px;
+  height: fit-content;
 
   a {
     border-radius: 20px;
     position: relative;
     overflow: hidden;
-    height: 285px;
+    height: fit-content;
   }
 
   img {
@@ -540,13 +550,16 @@ header {
 }
 
 .navbar {
+  padding-left: 2em;
   ul {
     margin-bottom: 0;
   }
+  div,
   li {
     a {
       color: @navbar-text-color;
       font-weight: 500;
+      font-size: 13pt;
       transition: ease-in-out;
       transition-duration: 0.25s;
     }
@@ -557,6 +570,12 @@ header {
 
   #navbar-list-item {
     margin-top: 6px;
+  }
+
+  .live {
+    background-size: 270px 270px;
+    background-position: -86px -29px;
+    display: flex;
   }
 
   .navbar-side-menu {
@@ -587,11 +606,6 @@ header {
     .weather-button {
       cursor: pointer;
       background-position: -52px -53px;
-    }
-
-    .live {
-      background-size: 270px 270px;
-      background-position: -106px -38px;
     }
 
     a {
@@ -874,11 +888,11 @@ header {
 .breaking-news-title,
 .news-alert-title,
 .rlive-news-title {
+  position: relative;
   font-size: 17pt;
   font-family: @main-font;
   font-weight: @main-font-weight;
-  position: relative;
-  width: 103px;
+  width: 210px;
 }
 
 .breaking-news-dot,
@@ -894,31 +908,26 @@ header {
 .breaking-news-banner {
   background-color: @breaking-news-panel-color-template;
 
+  a > img {
+    width: 12.5%;
+  }
+
   .breaking-news-dot {
     background-size: 300px 300px;
     background-position: -121px -47px;
     position: absolute;
-    right: 35px;
+    right: 15px;
     bottom: 5px;
   }
 
   .breaking-news-title {
-    width: 120px;
+    width: 100px;
   }
 
   a {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
-  }
-
-  #breaking-news-text-image {
-    height: 50px;
-  }
-
-  #breaking-news-image {
-    height: 70px;
-    margin: 1.5em;
   }
 
   #breaking-news-text {
@@ -983,19 +992,18 @@ header {
   }
 }
 
-.news-alert-banner {
-  #news-alert-text-image {
-    height: 50px;
-    margin-right: 32px;
+.breaking-news-banner,
+.news-alert-banner,
+.rlive-news-banner {
+  img {
+    width: 25%;
+    margin: 1.5em;
   }
+}
 
+.news-alert-banner {
   .news-alert-dot {
     background-position: -159px -46px;
-  }
-
-  #news-alert-image {
-    height: 70px;
-    margin: 1.5em;
   }
 
   #news-alert-text {
@@ -1031,18 +1039,9 @@ header {
 }
 
 .rlive-news-banner {
-  #rlive-news-text-image {
-    height: 50px;
-    margin-right: 32px;
-  }
-
   .rlive-news-dot {
     background-position: -159px -46px;
-  }
-
-  #rlive-news-image {
-    height: 70px;
-    margin: 1.5em;
+    right: 10px;
   }
 
   #rlive-news-text {
@@ -1194,13 +1193,6 @@ header {
     justify-content: flex-end;
   }
 
-  #article-1,
-  #article-2,
-  #article-3 {
-    flex: 0 0 27.5%;
-    max-width: 27.5%;
-  }
-
   .call-to-action {
     display: flex;
     justify-content: start;
@@ -1313,7 +1305,8 @@ header {
   padding: 2em 0;
   .small-article {
     a {
-      display: inherit;
+      display: flex;
+      align-items: center;
     }
     flex: 0 0 27.5%;
     max-width: 27.5%;
@@ -1333,6 +1326,16 @@ header {
 
 /*=====  End of Sub Economie  ======*/
 
+.economie,
+.in-lume,
+.life,
+.politica,
+.societate {
+  .logo-row {
+    justify-content: flex-start;
+  }
+}
+
 /*=============================================
 =            Politica            =
 =============================================*/
@@ -1345,13 +1348,11 @@ header {
     padding-bottom: 1em;
   }
   .adblock {
-    height: auto;
     margin-top: 28%;
     .close-icon {
       right: 14px;
     }
     a {
-      height: auto;
       img {
         height: auto;
         overflow: initial;
@@ -1422,7 +1423,7 @@ header {
 .in-lume,
 .life {
   .section-logo {
-    padding-left: 9.5%;
+    padding-left: 14.5%;
   }
 
   .big-article {
@@ -1632,8 +1633,12 @@ header {
   }
 
   .bani-logo {
-    width: 40%;
-    margin-right: 22%;
+    width: 20%;
+    margin-left: 16%;
+  }
+
+  .logo-col {
+    justify-content: flex-start;
   }
 
   img {
@@ -1648,7 +1653,7 @@ header {
 /*=====  End of Bani  ======*/
 
 /*=============================================
-=            Tags and Social Networks            =
+=           Top Tags and Social Networks            =
 =============================================*/
 
 .social-networks,
@@ -1656,6 +1661,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   width: 85%;
   margin: auto;
   border-bottom: 2px solid @separation-line-color;
@@ -1705,7 +1711,7 @@ header {
   }
 }
 
-/*=====  End of Tags and Social Networks  ======*/
+/*=====  End of Top Tags and Social Networks  ======*/
 
 /*=============================================
 =            Additional Articles            =
@@ -1831,10 +1837,15 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: row;
+
+    ul {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   #search-panel {
-    width: 250px;
+    width: 100%;
 
     justify-content: space-between;
     align-items: center;
@@ -1856,7 +1867,7 @@ footer {
   .search-box {
     position: relative;
 
-    width: 250px;
+    width: 300px;
   }
 
   .search-icon {
@@ -1882,3 +1893,379 @@ footer {
 }
 
 /*=====  End of Footer  ======*/
+
+/*=============================================
+=            Media queries            =
+=============================================*/
+
+@media screen and (min-width: 1250px) and (max-width: 1321px) {
+  .top-tags {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1310px) {
+  .breaking-news-banner #breaking-news-text {
+    font-size: 18px;
+  }
+  .rlive-news-banner #rlive-news-text,
+  .news-alert-banner #news-alert-text {
+    font-size: 12px;
+  }
+
+  .breaking-news-banner,
+  .rlive-news-banner,
+  .news-alert-banner {
+    a > img {
+      width: 12vw;
+      margin-right: 0.5em;
+      margin-left: 0.4em;
+    }
+  }
+
+  #main .breaking-news-banner #breaking-news-text {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1185px) and (max-width: 1250px) {
+  .top-tags {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1185px) {
+  .top-tags {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1275px) and (max-width: 1335px) {
+  .navbar {
+    li a {
+      font-size: 12pt;
+    }
+  }
+}
+
+@media screen and (min-width: 1210px) and (max-width: 1275px) {
+  .navbar {
+    padding-left: 2em;
+    li a {
+      font-size: 11pt;
+    }
+  }
+}
+
+@media screen and (min-width: 10px) and (max-width: 1210px) {
+  .navbar {
+    padding-left: 1em;
+    li a {
+      font-size: 10pt;
+    }
+  }
+
+  .sub-economie {
+    .small-article {
+      flex: 0 0 32%;
+      max-width: 32%;
+    }
+  }
+
+  .realitatea-tv {
+    .call-to-action {
+      right: 20%;
+    }
+  }
+}
+
+@media (max-width: 1195px) {
+  .last-tag {
+    display: none;
+  }
+}
+
+@media (min-width: 1095px) {
+  .live-block-sm {
+    display: none;
+  }
+  .live-block-lg {
+    display: flex;
+  }
+}
+
+@media (max-width: 1095px) {
+  .text-left-nav {
+    margin: 0;
+  }
+  .left-nav {
+    flex-direction: column-reverse;
+  }
+
+  header .logo {
+    margin-left: -27px;
+    margin-top: 15px;
+  }
+  .right-header-menu {
+    margin-top: 15px;
+    .search-field {
+      width: 150px;
+    }
+  }
+  .live-block-lg {
+    display: none;
+  }
+
+  .navbar {
+    flex-direction: column-reverse;
+  }
+
+  .live-block-sm {
+    display: flex;
+    .icon {
+      background-position: -108px -40px;
+    }
+    a {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+}
+
+@media screen and (max-width: 825px) {
+  .right-header-menu > ul {
+    position: relative;
+    margin-right: -45px;
+  }
+}
+
+// @media screen and (min-width: ) and (max-width: 1185px) {
+// }
+
+/*----------  Bootstrap queries  ----------*/
+
+// Extra small devices (portrait phones, less than 576px) xs
+@media (max-width: 575.98px) {
+}
+
+// Small devices (landscape phones, less than 768px) sm
+@media (max-width: 767.98px) {
+}
+
+@media (max-width: 850px) {
+  .last-tag-lg,
+  .top-tags .tag.last-tag {
+    display: none;
+  }
+}
+
+@media (min-width: 991.98px) {
+  .bani,
+  .realitatea-tv,
+  .rlive {
+    #article-1,
+    #article-2,
+    #article-3 {
+      flex: 0 0 27.5%;
+      max-width: 27.5%;
+    }
+  }
+}
+
+// Medium devices (tablets, less than 992px) md
+@media (max-width: 991.98px) {
+  .last {
+    border-bottom: 2px solid @separation-line-color !important;
+  }
+  body {
+    background-color: @mobile-background-color;
+  }
+
+  section .mobile {
+    display: block;
+  }
+
+  .breaking-news-banner {
+    padding-right: 1em;
+    .breaking-news-title {
+      margin-right: 0.6em;
+    }
+    #breaking-news-text {
+      font-size: 13pt;
+      line-height: 14pt;
+    }
+  }
+
+  .headline-news {
+  }
+
+  .economie,
+  .in-lume,
+  .life,
+  .societate,
+  .politica,
+  .actualitate {
+    .call-to-action {
+      display: flex;
+      width: 100px;
+      height: fit-content;
+      right: 10px;
+      bottom: unset;
+    }
+    .big-article {
+      height: unset;
+    }
+  }
+
+  .economie,
+  .in-lume,
+  .life,
+  .societate {
+    .section-logo {
+      padding-left: 0;
+      &:hover {
+        color: black;
+      }
+    }
+  }
+
+  .section-logo:hover {
+    color: black;
+  }
+
+  .top-tags {
+    border-top: none;
+    border-bottom: none;
+    color: white;
+    font-family: @main-font;
+    justify-content: flex-start;
+    ul {
+      padding-left: 0.6em;
+    }
+    .last-tag {
+      display: flex;
+    }
+    .more-info {
+      display: none;
+    }
+    .section-logo {
+      padding: 0.5em;
+      font-size: 25pt;
+    }
+    .new-line {
+      display: block;
+      width: 100vw;
+    }
+  }
+
+  .rlive,
+  .bani,
+  .realitatea-tv {
+    .call-to-action {
+      right: 10px;
+    }
+    .logo-col {
+      justify-content: flex-start;
+    }
+  }
+
+  .bani {
+    .bani-logo {
+      margin-left: 0;
+    }
+    .call-to-action {
+      color: @bani-call-to-action-color;
+      font-size: 14pt;
+      .icon {
+        background-position: -148px -50px;
+      }
+    }
+  }
+
+  .auto-tech-sport {
+    .logo-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+    }
+
+    .call-to-action {
+      bottom: unset;
+      right: 1.5%;
+    }
+    .section-logo {
+      width: fit-content;
+      font-size: 25pt;
+      padding: 0.2em;
+    }
+
+    subsection {
+      .article-title {
+        width: 45px;
+        left: 32.5%;
+        top: 10%;
+      }
+    }
+
+    .section-dot {
+      width: 30px;
+      height: 30px;
+      background-position: -154px -41px;
+      background-size: 300px 300px;
+    }
+  }
+
+  .section-logo {
+    font-size: 25pt;
+  }
+
+  .social-networks {
+    border-top: none;
+    ul .social-network {
+      padding: 0.3em 1em;
+    }
+    .section-logo {
+      padding: 0.5em;
+      position: relative;
+      right: 17%;
+    }
+  }
+
+  .social-networks {
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
+
+  footer .search-box {
+    #search-panel {
+      padding: 0.7em 2em;
+    }
+    .icon {
+      top: 8px;
+    }
+  }
+
+  .col-12 {
+    flex: 0 0 100% !important;
+    max-width: 100% !important;
+    -ms-flex: 0 0 100% !important;
+  }
+
+  .non-mobile {
+    display: none !important;
+  }
+}
+
+// Large devices (desktops, less than 1200px) lg
+@media (max-width: 1199.98px) {
+}
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+/*=====  End of Media queries  ======*/
